Updating frontend with rest of crypto button calls

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div>
   <h3 >Choose Crypto</h3>
-  <button mat-raised-button (click)="getBTC()">BTC</button>
-  <button mat-raised-button>ETH</button>
-  <button mat-raised-button>XRP</button>
-  <button mat-raised-button>LTC</button>
-  <button mat-raised-button>BCH</button>
-  <button mat-raised-button>ETC</button>
+  <button mat-raised-button (click)="getBTC('btc')">BTC</button>
+  <button mat-raised-button (click)="getBTC('eth')">ETH</button>
+  <button mat-raised-button (click)="getBTC('xrp')">XRP</button>
+  <button mat-raised-button (click)="getBTC('ltc')">LTC</button>
+  <button mat-raised-button (click)="getBTC('bch')">BCH</button>
+  <button mat-raised-button (click)="getBTC('etc')">ETC</button>
 </div>
 
 <div>
