Adding tests for frontend. Also adding comments

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -18,7 +18,7 @@
 <div>
   <h3>Prices</h3>
   <div>
-    <h4>USD: {{USD_price}}</h4>
+    <h4 id="usd">USD: {{USD_price}}</h4>
     <h4>GBP: {{GBP_price}}</h4>
     <h4>EUR: {{EUR_price}}</h4>
     <h4>JPY: {{JPY_price}}</h4>
